# health-fitness-rag

./: .gitignore  README.md  app.py  ingest.py  pyproject.toml  requirements.txt
evaluation/: eval.py  test.py  tests.jsonl
fitness_health_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
implementation/: answer.py  ingest.py  knowledge_base_cache.json
knowledge-base/fitness-principles/: progressive-overload.md
knowledge-base/health/: general-health.md
knowledge-base/nutrition/: dietary-guidelines.md  meal-planning.md
knowledge-base/sleep/: sleep-guide.md
knowledge-base/stress/: stress-management.md
knowledge-base/workouts/: begineer-workouts.md  intermediate-workouts.md
