[project]
name = "fitness-health-rag"
version = "0.1.0"
description = "A RAG-powered fitness and health assistant chatbot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.1",
    "gradio>=6.11.0",
    "langchain>=1.2.17",
    "langchain-core>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-pinecone>=0.1.0",
    "pinecone-client>=3.0.0",
    "openai>=2.20.0",
    "tiktoken>=0.12.0",
    "litellm>=1.74.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"